# HHconverter

./: .gitignore  HHConverter.spec  LICENSE  README.md  build.ps1  config.example.json  pyproject.toml
converter/: __init__.py  __main__.py  cli.py  coin_convert.py  coin_format.py  dropbox_mirror.py  engine.py  export_names.py  gg_convert.py  gui.py  hand_ids.py  normalize.py  player_names.py  pp_blinds.py  pp_body.py  pp_convert.py  pp_format.py  pp_hero.py  settings.py  split_hands.py  time_et.py  up_convert.py
